fix program sidebar

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-24 15:06+0300\n"
+"POT-Creation-Date: 2017-10-24 16:44+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,21 +57,36 @@ msgid ""
 "just answer the questions in the body of an e-mail and send it to "
 "<strong>apply@okthess.gr</strong></p>\n"
 "              "
-msgstr "\n"
+msgstr ""
+"\n"
+"<p>Γίνονται δεκτές ανά πάσα στιγμή προτάσεις από άτομα ή ομάδες με "
+"καινοτόμες ιδέες, ανεξάρτητα του βαθμού ωρίμανσης, που θα ήθελαν να "
+"ωφεληθούν από τις υπηρεσίες της προ-θερμοκοιτίδας του OK!Thess ώστε να "
+"στήσουν μια επιχείρηση (startup) ή να ενισχύσουν μια startup που έχουν ήδη "
+"στήσει.</p><p>Οι προτάσεις αξιολογούνται σε τακτά χρονικά διαστήματα, οι "
+"ακριβείς ημερομηνίες ανακοινώνονται στην παρούσα ιστοσελίδα.</p><p>Η "
+"τρέχουσα περίοδος κατάθεσης προτάσεων κλείνει στις 13 Σεπτεμβρίου του 2017. "
+"Τα αποτελέσματα της αξιολόγησης θα ανακοινωθούν στις 19 Σεπτεμβρίου. Η "
+"περίοδος θερμοκοίτησης περιλαμβάνει υποχρεωτικές παρακολουθήσεις από τις 2 "
+"έως και τις 13 Οκτωβρίου.</p><p>Για συμμετοχή συμπληρώστε την παρακάτω φόρμα "
+"συμμετοχής ή απαντήστε τις ερωτήσεις στο σώμα ενός e-mail και στείλτε στο "
+"<strong>apply@okthess.gr</strong></p>"
 
-"<p>Γίνονται δεκτές ανά πάσα στιγμή προτάσεις από άτομα ή ομάδες με καινοτόμες ιδέες, ανεξάρτητα του βαθμού ωρίμανσης, που θα ήθελαν να ωφεληθούν από τις υπηρεσίες της προ-θερμοκοιτίδας του OK!Thess ώστε να στήσουν μια επιχείρηση (startup) ή να ενισχύσουν μια startup που έχουν ήδη στήσει.</p>"
+#: .\main\templates\main\apply.html:18
+msgid "Information - GR"
+msgstr ""
 
-"<p>Οι προτάσεις αξιολογούνται σε τακτά χρονικά διαστήματα, οι ακριβείς ημερομηνίες ανακοινώνονται στην παρούσα ιστοσελίδα.</p>"
+#: .\main\templates\main\apply.html:18
+#, fuzzy
+#| msgid "Internal Regulation"
+msgid "<nobr>Internal Regulation</nobr>"
+msgstr "Εσωτερικός Κανονισμός"
 
-"<p>Η τρέχουσα περίοδος κατάθεσης προτάσεων κλείνει στις 13 Σεπτεμβρίου του 2017. Τα αποτελέσματα της αξιολόγησης θα ανακοινωθούν στις 19 Σεπτεμβρίου. Η περίοδος θερμοκοίτησης περιλαμβάνει υποχρεωτικές παρακολουθήσεις από τις 2 έως και τις 13 Οκτωβρίου.</p>"
-
-"<p>Για συμμετοχή συμπληρώστε την παρακάτω φόρμα συμμετοχής ή απαντήστε τις ερωτήσεις στο σώμα ενός e-mail και στείλτε στο <strong>apply@okthess.gr</strong></p>"
-
-#: .\main\templates\main\apply.html:27
+#: .\main\templates\main\apply.html:28
 msgid "Application form"
 msgstr ""
 
-#: .\main\templates\main\apply.html:37
+#: .\main\templates\main\apply.html:38
 msgid "Submit"
 msgstr "Υποβολή"
 
@@ -252,7 +267,11 @@ msgid ""
 "help our teams as a mentor? Drop us an email at <strong>dimitri@okthess.gr</"
 "strong>. \n"
 "                          "
-msgstr ""
+msgstr "\n"
+"Επαγγελματίας με εκτεταμένη εμπειρία οι οποίοι βοηθάνε τις ομάδες του προγράμματος."
+"Οι μέντορες μπορεί να είναι ηλικιακά μεγαλύτεροι ή μικρότεροι από τα άτομα που βοηθάνε"
+"και είναι σε θέση να διαμοιράσουν την υψηλή τους εξειδίκευση σε συγκεκριμένο τομέα της αγοράς."
+
 
 #: .\main\templates\main\program-teams.html:15
 msgid "Hosted Teams"
