--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-30 02:26+0200\n"
+"POT-Creation-Date: 2017-10-30 03:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -33,21 +33,21 @@ msgstr "Συνεργατικός Χώρος"
 
 #: .\main\templates\main\about.html:41
 msgid "Official Docs<small> - GR</small>"
-msgstr ""
+msgstr "Έγγραφα"
 
 #: .\main\templates\main\about.html:45
 msgid "Concept"
-msgstr ""
+msgstr "Αρχική Ιδέα"
 
 #: .\main\templates\main\about.html:50
 msgid "Memorandum"
-msgstr ""
+msgstr "Μνημόνιο Συνεργασίας"
 
 #: .\main\templates\main\about.html:55
 #, fuzzy
 #| msgid "Internal Regulation"
 msgid "Regulation"
-msgstr "Εσωτερικός Κανονισμός"
+msgstr "Κανονισμός"
 
 #: .\main\templates\main\apply.html:12
 msgid ""
@@ -161,12 +161,14 @@ msgstr "Όλες οι συναντήσεις"
 
 #: .\main\templates\main\events.html:42
 msgid "Hosted Meetups"
-msgstr "Φιλοξενούμενες Συναντήσεις"
+msgstr ""
 
 #: .\main\templates\main\events.html:56
 msgid ""
 "The meetup of OK!Thess is the new thing in town. Click here to learn more"
 msgstr ""
+"Μια ανοιχτή συνάντηση που έχει σαν στόχο την ενημέρωση της κοινότητας "
+"σχετικά με το ΟΚ!Τhess και τις δράσεις του."
 
 #: .\main\templates\main\events.html:59
 msgid "Past Events"
@@ -256,6 +258,11 @@ msgid "DONOR"
 msgstr "ΔΩΡΗΤΗΣ"
 
 #: .\main\templates\main\program-alumni.html:13
+#, fuzzy
+#| msgid "Hosted Teams"
+msgid "Graduated Teams"
+msgstr "Φιλοξενούμενες Ομάδες"
+
 #: .\main\templates\main\program-alumni.html:34
 #: .\main\templates\main\program-mentors.html:40
 #: .\main\templates\main\program-teams.html:52
@@ -287,15 +294,28 @@ msgstr ""
 #: .\main\templates\main\program-alumni.html:40
 #: .\main\templates\main\program-mentors.html:41
 #: .\main\templates\main\program-teams.html:45
-msgid "Teams"
-msgstr "Ομάδες"
+#, fuzzy
+#| msgid "Internal Regulation"
+msgid "Selection"
+msgstr "Κανονισμός"
 
 #: .\main\templates\main\program-alumni.html:41
-#: .\main\templates\main\program-mentors.html:13
 #: .\main\templates\main\program-mentors.html:36
 #: .\main\templates\main\program-teams.html:51
-msgid "Mentors"
-msgstr "Μέντορες"
+#, fuzzy
+#| msgid "Teams"
+msgid "Team"
+msgstr "Ομάδες"
+
+#: .\main\templates\main\program-alumni.html:45
+#: .\main\templates\main\program-mentors.html:45
+#: .\main\templates\main\program-teams.html:56
+msgid "Apply now!"
+msgstr "Κάνε Αίτηση"
+
+#: .\main\templates\main\program-mentors.html:13
+msgid "The OK!Thess Team"
+msgstr ""
 
 #: .\main\templates\main\program-mentors.html:38
 msgid ""
@@ -328,10 +348,6 @@ msgid ""
 "                              "
 msgstr ""
 
-#: .\main\templates\main\program-teams.html:55
-msgid "Apply now!"
-msgstr "Κάνε Αίτηση"
-
 #: .\okthess\settings.py:181
 msgid "Greek"
 msgstr "Ελληνικά"
@@ -339,6 +355,9 @@ msgstr "Ελληνικά"
 #: .\okthess\settings.py:182
 msgid "English"
 msgstr "Αγγλικά"
+
+#~ msgid "Mentors"
+#~ msgstr "Μέντορες"
 
 #, fuzzy
 #~| msgid "Mentors"
